objects/Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Pos__c</fullName>
        <description>Op Plan Account Name from the record having funds added.</description>
        <formula>IF(ISBLANK(Op_Plan_Positive__r.Account_Name__c),   Award_Budget_Pos__r.Award_Budget_Account__c , Op_Plan_Positive__r.Account_Name__c)</formula>
        <inlineHelpText>Op Plan Account Name from the record having funds added.</inlineHelpText>
        <label>Account Name (+)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_neg__c</fullName>
        <description>Op Plan Account Name from the record having funds removed.</description>
        <formula>IF(ISBLANK(Op_Plan_Negative__r.Account_Name__c),   Award_Budget_Neg__r.Award_Budget_Account__c , Op_Plan_Negative__r.Account_Name__c)</formula>
        <inlineHelpText>Op Plan Account Name from the record having funds removed.</inlineHelpText>
        <label>Account Name (-)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Date__c</fullName>
        <description>Adjustment date set by process builder upon finalization of the adjustment</description>
        <inlineHelpText>Automatically set once the record is finalized.</inlineHelpText>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by process builder once the adjustment process is executed.</description>
        <label>Adjustment Executed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjustment_Timestamp__c</fullName>
        <description>Timestamp of the adjustment set by process builder.</description>
        <inlineHelpText>Timestamp of the adjustment set by process builder.</inlineHelpText>
        <label>Adjustment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Allowance_Holder__c</fullName>
        <description>Used by the DCR app for sharing rules.</description>
        <label>Allowance Holder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>56 - OTAQ</fullName>
                </value>
                <value>
                    <fullName>58 - OAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of money that will be moved from one op plan to another.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Award_Adjustment_Amount__c</fullName>
        <label>Award Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Budget_Adjustment_Type__c</fullName>
        <description>Determines the type of ARTT budget adjustment so that the adjustment process knows which budget amount to adjust.</description>
        <inlineHelpText>Indicate which budget you're adjusting.</inlineHelpText>
        <label>Award Budget Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S-Award</fullName>
                </value>
                <value>
                    <fullName>QSI</fullName>
                </value>
                <value>
                    <fullName>Title-42/SL/ST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Award_Budget_From_Neg__c</fullName>
        <label>Award Budget (-) From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Budget_From_Pos__c</fullName>
        <label>Award Budget (+) From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Budget_Neg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award budget record that the funds are being moved from.</description>
        <inlineHelpText>Award Budget Record that the funds are being moved from.</inlineHelpText>
        <label>Award Budget (-)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Document__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Document_Award_Budget</value>
            </filterItems>
            <filterItems>
                <field>Document__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Document_Award_Budget_Control</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Adjustments (Award Budget (-))</relationshipLabel>
        <relationshipName>Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_Budget_Pos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award Budget that the funds are being moved to.</description>
        <inlineHelpText>Award Budget record that the funds are being moved to.</inlineHelpText>
        <label>Award Budget (+)</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Adjustments (Award Budget (+))</relationshipLabel>
        <relationshipName>Adjustments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award_Budget_To_Neg__c</fullName>
        <label>Award Budget (-) To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Budget_To_Pos__c</fullName>
        <label>Award Budget (+) To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Adjustment_Type__c</fullName>
        <description>Op Plan/Sub-Allocation adjustment type.</description>
        <inlineHelpText>Please categorize the Op Plan adjustment.</inlineHelpText>
        <label>Budget Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Reprogramming</fullName>
                </value>
                <value>
                    <fullName>New Authority</fullName>
                </value>
                <value>
                    <fullName>Sweep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Neg_From_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by process builder and used to indicate that the from field is set, which in turn will trigger the adjustment process.</description>
        <label>Op Plan (-) From Set?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Neg_From__c</fullName>
        <description>Set by process builder. The amount that the Op Plan (-) was prior to the execution of the adjustment.</description>
        <inlineHelpText>The amount that the Op Plan (-) was prior to the execution of the adjustment.</inlineHelpText>
        <label>Op Plan (-) From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Neg_To__c</fullName>
        <description>Set by process builder. The amount that the Op Plan (-) changed to after the execution of the adjustment.</description>
        <inlineHelpText>The amount that the Op Plan (-) changed to after the execution of the adjustment.</inlineHelpText>
        <label>Op Plan (-) To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Negative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The op plan from which money will be taken out.</description>
        <label>Op Plan (-)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select a Document record with an Op Plan or Division Sub-Allocation record type.</errorMessage>
            <filterItems>
                <field>Document__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Op Plan</value>
            </filterItems>
            <filterItems>
                <field>Document__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Division Sub-Allocation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Adjustments (Op Plan (-))</relationshipLabel>
        <relationshipName>Op_Plan_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Pos_From_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by process builder and used to indicate that the from field is set, which in turn will trigger the adjustment process.</description>
        <label>Op Plan (+) From Set?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Pos_From__c</fullName>
        <description>Set by process builder. The amount that the Op Plan (+) was prior to the execution of the adjustment.</description>
        <inlineHelpText>The amount that the Op Plan (+) was prior to the execution of the adjustment.</inlineHelpText>
        <label>Op Plan (+) From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Pos_To__c</fullName>
        <description>Set by process builder. The amount that the Op Plan (+) record changed to after the execution of the adjustment.</description>
        <inlineHelpText>The amount that the Op Plan (+) record changed to after the execution of the adjustment.</inlineHelpText>
        <label>Op Plan (+) To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Op_Plan_Positive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The op plan for which money will be added.</description>
        <label>Op Plan (+)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Please select either a Document with either an Op Plan or Division Sub-Allocation record type.</errorMessage>
            <filterItems>
                <field>Document__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Op Plan</value>
            </filterItems>
            <filterItems>
                <field>Document__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Division Sub-Allocation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Adjustments (Op Plan (+))</relationshipLabel>
        <relationshipName>Op_Plan_Adjustments_Credits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task_Sub_Task_Neg__c</fullName>
        <description>Project/Task/SubTask that is being adjusted downward.</description>
        <formula>Op_Plan_Negative__r.Project_Name__c 
	&amp; "/" &amp; 
	Op_Plan_Negative__r.Task_Name__c 
	&amp; "/" &amp; 
	Op_Plan_Negative__r.Sub_Task_Name__c</formula>
        <inlineHelpText>Project/Task/SubTask that is being adjusted downward.</inlineHelpText>
        <label>Project/Task/Sub-Task (-)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Task_Sub_Task_Pos__c</fullName>
        <description>Project/Task/Sub-Task that is having funds added.</description>
        <formula>Op_Plan_Positive__r.Project_Name__c 
	&amp; "/" &amp; 
	Op_Plan_Positive__r.Task_Name__c 
	&amp; "/" &amp; 
	Op_Plan_Positive__r.Sub_Task_Name__c</formula>
        <inlineHelpText>Project/Task/Sub-Task that is having funds added.</inlineHelpText>
        <label>Project/Task/Sub-Task (+)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>An adjustment's status. Adjustments can be drafts, indicating that an adjustment for a record or between records could happen, but isn't final.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Allows more granular tracking when making adjustments between records or when adjusting a single record. Requires users to provide justification for making an adjustment and also provides an opportunity for adjustment approvals.</description>
    <label>Adjustment</label>
    <nameField>
        <displayFormat>ADJ-{0000000}</displayFormat>
        <label>Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>ARTT_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Award_Budget_Neg__c</columns>
        <columns>Award_Budget_Pos__c</columns>
        <columns>Award_Budget_Adjustment_Type__c</columns>
        <columns>Award_Adjustment_Amount__c</columns>
        <columns>Justification__c</columns>
        <columns>Adjustment_Timestamp__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Adjustment__c.ARTT_Budget_Adjustment</value>
        </filters>
        <label>ARTT: Adjustments</label>
    </listViews>
    <listViews>
        <fullName>DCR_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Holder__c</columns>
        <columns>Op_Plan_Negative__c</columns>
        <columns>Op_Plan_Positive__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Adjustment__c.DCR_Op_Plan_Adjustment</value>
        </filters>
        <label>DCR: Op Plan Adjustments</label>
        <sharedTo>
            <group>DCR_OAR_OAP_PMO</group>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCR_Op_Plan_Adjustments_by_Record_OAP</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Holder__c</columns>
        <columns>Op_Plan_Negative__c</columns>
        <columns>Op_Plan_Positive__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Adjustment__c.DCR_Op_Plan_Adjustment</value>
        </filters>
        <filters>
            <field>Allowance_Holder__c</field>
            <operation>equals</operation>
            <value>58 - OAP</value>
        </filters>
        <label>DCR: Op Plan Adjustments by Record (OAP)</label>
        <sharedTo>
            <group>DCR_OAR_OAP_PMO</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCR_Sub_Allocation_Adjustments</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Holder__c</columns>
        <columns>Op_Plan_Negative__c</columns>
        <columns>Op_Plan_Positive__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Adjustment__c.DCR_Suballocation_Adjustment</value>
        </filters>
        <label>DCR: Sub-Allocation Adjustments</label>
        <sharedTo>
            <group>DCR_OAR_OAP_PMO</group>
            <group>DCR_OAR_OTAQ</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ARTT_Budget_Adjustment</fullName>
        <active>true</active>
        <description>Record type for making an adjustment to an ARTT budget document.</description>
        <label>ARTT Budget Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Op_Plan_Adjustment</fullName>
        <active>true</active>
        <description>Adjustments for op plans (Documents).</description>
        <label>DCR Op Plan Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Suballocation_Adjustment</fullName>
        <active>true</active>
        <description>Adjustments for suballocations (Documents).</description>
        <label>DCR Suballocation Adjustment</label>
    </recordTypes>
    <validationRules>
        <fullName>DCR_Op_Plan_Adjustments_Final</fullName>
        <active>true</active>
        <description>Does not allow the user to edit the record after its status changes to 'Final'</description>
        <errorConditionFormula>AND (
OR (
		ISCHANGED(Amount__c),
	 ISCHANGED(Op_Plan_Negative__c),
  ISCHANGED(Op_Plan_Positive__c),
		TEXT(PRIORVALUE(Budget_Adjustment_Type__c)) &lt;&gt; TEXT(Budget_Adjustment_Type__c),
		TEXT(PRIORVALUE(Status__c)) &lt;&gt; TEXT(Status__c)),
		TEXT(PRIORVALUE(Status__c)) = "Final",
RecordType.DeveloperName = "DCR_Op_Plan_Adjustment"
		)</errorConditionFormula>
        <errorMessage>The Adjustment record cannot be changed after it has been marked as final (i.e. processed).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCR_Op_Plans_Cannot_be_Same</fullName>
        <active>true</active>
        <description>The Op Plans in a DCR adjustment cannot be the same record.</description>
        <errorConditionFormula>OR(  RecordType.Name = "DCR Op Plan Adjustment", RecordType.Name = "DCR Suballocation Adjustment" ) &amp;&amp;  Op_Plan_Negative__c = Op_Plan_Positive__c</errorConditionFormula>
        <errorMessage>The Op Plan (+) and Op Plan (-) fields cannot reference the same document. Please adjust one of the fields or cancel the operation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Op_Plan_Adjustment_Values_Cannot_be_Null</fullName>
        <active>true</active>
        <description>Op plan adjustment values cannot be null for Op Plan and Suballocation record types when executed.</description>
        <errorConditionFormula>OR( RecordType.DeveloperName = "DCR_Op_Plan_Adjustment", RecordType.DeveloperName = "DCR_Suballocation_Adjustment" )
&amp;&amp;
AND (ISBLANK( Op_Plan_Negative__c ), ISBLANK( Op_Plan_Positive__c ) )
&amp;&amp;
ISPICKVAL( Status__c, "Final" )</errorConditionFormula>
        <errorMessage>The Op Plan (-) and (+) fields cannot both be null when trying to execute an adjustment. Please enter Op Plan or Suballocation records one of the fields.</errorMessage>
    </validationRules>
</CustomObject>